--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 
 MONGO_URI='mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net/expense_tracker?retryWrites=true&w=majority&appName=Cluster0'
 
-JWT_SECRET=your-super-secret-jwt-key-here
+JWT_SECRET=mysecretkey
 JWT_EXPIRES_IN=7d
 
 # Email configuration for password reset
@@ -22,7 +22,7 @@ LINKEDIN_REDIRECT_URI=your-linkedin-redirect-uri
 # Admin Panel Configuration
 ADMIN_EMAIL=admin@expensetracker.com
 ADMIN_PASSWORD=Admin@123
-ADMIN_JWT_SECRET=your_admin_jwt_secret_key_here
+ADMIN_JWT_SECRET=adminsecretjwtkey
 
 # Database Configuration
 DB_HOST=localhost
@@ -34,6 +34,8 @@ DB_NAME=your_db_name
 # Base URL Configuration
 BASE_URL=http://localhost:3000
 PRODUCTION_BASE_URL=https://your-production-domain.com
+
+VITE_API_URL=https://expense-tracker-backend-henna.vercel.app/api
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000,http://localhost:3001,https://your-production-domain.com
