--- a/admin-panel/.env.example
+++ b/admin-panel/.env.example
@@ -3,4 +3,4 @@ VITE_API_URL=http://localhost:3000/api
 
 
 # Production (update this after deploying your backend)
-# VITE_API_URL=https://your-backend-domain.vercel.app/api
+VITE_API_URL=https://expense-tracker-backend-henna.vercel.app/api
