--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,15 @@
 {
   "name": "expense-tracker-backend",
   "version": "1.0.0",
-  "description": "Backend for expense tracker app",
+  "description": "Backend for expense tracker application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'Build complete'"
+    "build": "echo 'Build completed'"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "axios": "^1.12.2",
