--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -3,8 +3,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "vercel-build": "npm run build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
