--- a/backend/.env
+++ b/backend/.env
@@ -1,50 +1,57 @@
-PORT=3000
-NODE_ENV=development
+# Server Configuration
+PORT=3000  # Port where the backend server will run
+NODE_ENV=development  # Environment: development/production
 
+# MongoDB Database Configuration
 MONGO_URI='mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net/expense_tracker?retryWrites=true&w=majority&appName=Cluster0'
 
-JWT_SECRET=mysecretkey
-JWT_EXPIRES_IN=7d
+# JWT Authentication Configuration
+JWT_SECRET=mysecretkey  # Secret key for generating JWT tokens
+JWT_EXPIRES_IN=7d  # Token expiration time
 
-# Email configuration for password reset
+# Email configuration for password reset functionality
 EMAIL_USERNAME=your-email@gmail.com
 EMAIL_PASSWORD=your-app-password
 EMAIL_FROM=noreply@expensetracker.com
 EMAIL_SERVICE=gmail
 
-# OAuth Configuration
+# OAuth Configuration for social login
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 LINKEDIN_CLIENT_ID=your-linkedin-client-id
 LINKEDIN_CLIENT_SECRET=your-linkedin-client-secret
 LINKEDIN_REDIRECT_URI=your-linkedin-redirect-uri
 
-# Admin Panel Configuration
+# Admin Panel Authentication Configuration
 ADMIN_EMAIL=admin@expensetracker.com
 ADMIN_PASSWORD=Admin@123
 ADMIN_JWT_SECRET=adminsecretjwtkey
 
-# Database Configuration
+# Database Configuration (if using SQL database)
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=your_db_user
 DB_PASSWORD=your_db_password
 DB_NAME=your_db_name
 
-# Base URL Configuration
-BASE_URL=http://localhost:3000
-PRODUCTION_BASE_URL=https://your-production-domain.com
+# Base URL Configuration for frontend/backend communication
+BASE_URL=http://localhost:3000  # Development backend URL
+PRODUCTION_BASE_URL=https://expense-tracker-backend-48vm.onrender.com  # Production backend URL
 
-VITE_API_URL=https://expense-tracker-backend-henna.vercel.app/api
+# Frontend API URL configuration
+VITE_API_URL=https://expense-tracker-rot7.onrender.com/api  # Updated to match your production backend
 
-# CORS Configuration
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001,https://your-production-domain.com
+# CORS Configuration - Allowed origins for cross-origin requests
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5173,https://expense-tracker-rot7.onrender.com
 
-# Security
-BCRYPT_SALT_ROUNDS=12
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+# Security Configuration
+BCRYPT_SALT_ROUNDS=12  # Salt rounds for password hashing
+RATE_LIMIT_WINDOW_MS=900000  # Rate limiting window (15 minutes)
+RATE_LIMIT_MAX_REQUESTS=100  # Maximum requests per window
 
-# File Upload
-MAX_FILE_SIZE=5242880
-UPLOAD_PATH=./uploads
+# File Upload Configuration
+MAX_FILE_SIZE=5242880  # Maximum file size (5MB)
+UPLOAD_PATH=./uploads  # Directory for uploaded files
+
+# API Version
+API_VERSION=v1  # API version for versioning endpoints
