--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Server Configuration
 PORT=3000  # Port where the backend server will run
-NODE_ENV=development  # Environment: development/production
+NODE_ENV=production  # Environment: development/production
 
 # MongoDB Database Configuration
 MONGO_URI='mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net/expense_tracker?retryWrites=true&w=majority&appName=Cluster0'
