--- a/admin-panel/.env
+++ b/admin-panel/.env
@@ -1,6 +1,6 @@
 # Local Development
 VITE_API_URL=http://localhost:3000/api
 
-
+NODE_ENV=production
 # Production (update this after deploying your backend)
 VITE_API_URL=https://expense-tracker-backend-48vm.onrender.com/api
