--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,7 @@ NODE_ENV=production  # Environment: development/production
 
 # MongoDB Database Configuration
 MONGO_URI='mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net/expense_tracker?retryWrites=true&w=majority&appName=Cluster0'
+# mongosh "mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net/expense_tracker"
 
 # JWT Authentication Configuration
 JWT_SECRET=mysecretkey  # Secret key for generating JWT tokens
