--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Server Configuration
-PORT=3000  # Port where the backend server will run
+PORT=5000  # Port where the backend server will run
 NODE_ENV=production  # Environment: development/production
 
 # MongoDB Database Configuration
@@ -7,7 +7,7 @@ MONGO_URI='mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net
 # mongosh "mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net/expense_tracker"
 
 # JWT Authentication Configuration
-JWT_SECRET=mysecretkey  # Secret key for generating JWT tokens
+JWT_SECRET=your_jwt_secret_key_here  # Secret key for generating JWT tokens
 JWT_EXPIRES_IN=7d  # Token expiration time
 
 # Email configuration for password reset functionality
