--- a/backend/.env
+++ b/backend/.env
@@ -7,14 +7,8 @@ MONGO_URI='mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net
 # mongosh "mongodb+srv://basicform:s7sKAFmqlV0Wl7QK@cluster0.mdbt9bg.mongodb.net/expense_tracker"
 
 # JWT Authentication Configuration
-JWT_SECRET=your_jwt_secret_key_here  # Secret key for generating JWT tokens
+JWT_SECRET=mysecretkey  # Secret key for generating JWT tokens
 JWT_EXPIRES_IN=7d  # Token expiration time
-
-# Email configuration for password reset functionality
-EMAIL_USERNAME=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password
-EMAIL_FROM=noreply@expensetracker.com
-EMAIL_SERVICE=gmail
 
 # OAuth Configuration for social login
 GOOGLE_CLIENT_ID=your-google-client-id
@@ -60,3 +54,9 @@ API_VERSION=v1  # API version for versioning endpoints
 # Session Configuration
 SESSION_SECRET=your-random-secret-key-min-32-characters
 SESSION_TIMEOUT=86400000
+
+# Email Configuration
+EMAIL_SERVICE=gmail
+EMAIL_USER=computerpankaj17@gmail.com
+EMAIL_PASSWORD=gexjqaylxyneagwm
+FRONTEND_URL=http://localhost:5173
