--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
+    "cross-env": "^10.1.0",
     "terser": "^5.44.0",
     "vite": "^4.4.0"
   },
