--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 vite build",
-    "build:prod": "cross-env NODE_ENV=production vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,11 +19,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "cross-env": "^10.1.0",
+    "cross-env": "^7.0.3",
     "terser": "^5.44.0",
     "vite": "^4.4.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0 <=20.0.0"
   }
 }
